2009-05-24 Benjamin Lindner <lindnerb@users.sourceforge.net>

	* plot/gnuplot_drawnow.m: single-quote output name to allow backslash
	characters as filesep under windows
	* plot/print.m: Support ps->pdf using ghostscript under windows, check
	for %GSC% environment variable.

2009-05-24 Benjamin Lindner <lindnerb@users.sourceforge.net>

	* plot/__gnuplot_version__.m: quote gnuplot_binary to allow spaces
	in file name

2009-05-22  John W. Eaton  <jwe@octave.org>

	* general/interp3.m: Don't require interpolation grid to have same
	size as data.  From Kris Thielemans <kris.thielemans@imperial.ac.uk>.

2009-05-19 Carlo de Falco  <kingcrimson@tiscali.it>

	* pkg/pkg.m: Fix a bug when quering only one non installed package
	with "pkg describe".

2009-05-14  Jaroslav Hajek  <highegg@gmail.com>

	* optimization/__fdjac__.m: Support central differences.
	* optimization/fsolve.m: Support central differences. Add FinDiffType
	option.
	* optimization/fminunc.m: Ditto.

2009-05-17  Rik Wehbring  <rdrider0-list@yahoo.com>

	* *.m: Simplify Texinfo documentation in .m scripts by removing 
	redundant @iftex calls

2009-05-17  Jaroslav Hajek  <highegg@gmail.com>

	* optimization/fminunc.m: Improve TR updating strategy.
	* optimization/fsolve.m: Ditto.

2009-05-15  John W. Eaton  <jwe@octave.org>

	* general/nargchk.m: Don't generate error if output is struct.
	Uncomment some additional tests.
	From Alois Schloegl <alois.schloegl@tugraz.at>

2009-05-14  Jaroslav Hajek  <highegg@gmail.com>

	* optimization/fminunc.m: Import the step adaptation strategy
	improvements from fsolve.

2009-05-08  Ben Abbott <bpabbott@mac.com>

	* plot/__gnuplot_has_feature__.m: Add feature "key_has_font_properties".
	* plot/__go_draw_axes__.m: Have legend inherit the axis font-name/size.

2009-05-04  Peter O'Gorman  <pogma@thewrittenword.com>

	* miscellaneous/tar.m, miscellaneous/unpack.m:
	Pass "xvf" to tar instead of "-x -v -f".

2009-04-30  Ben Abbott <bpabbott@mac.com>
